// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GitExpertApp test suite should render default template when default properties are set 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <hr />
  <AddCategory
    setCategories={[Function]}
  />
  <ol>
    <GifGrid
      category="One punch"
      key="One punch"
    />
  </ol>
</Fragment>
`;

exports[`GitExpertApp test suite should render default template when default properties are set 2`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <hr />
  <AddCategory
    setCategories={[Function]}
  />
  <ol>
    <GifGrid
      category="One Push"
      key="One Push"
    />
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
  </ol>
</Fragment>
`;
